UI Improvement: This commit adds Dark mode to the website and also minor bug fixes.
1. Dark Mode enabled with manual toggle facility
2. Automatic Year setting in footer
3. Link hover improvements

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -27,6 +27,22 @@ $crimson-color-dark:    #b71212;
 
 $orange-color:          #ff8f26;
 
+@media(prefers-color-scheme: dark) {
+  $dark-background: #000;
+  $background-color : #121212;
+  $text-color:#fafafa;  
+}
+:root {
+  --text-color:       #111;
+  --background-color: #fdfdfd;
+}
+
+[data-theme="dark"] {
+  --background-color : #121212;
+  --text-color:#fafafa;  
+}
+
+
 // Width of the content area
 $content-width:    800px !default;
 
