--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -24,7 +24,9 @@ hr {
 body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
   color: $text-color;
+  color: var(--text-color);
   background-color: $background-color;
+  background-color: var(--background-color);
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
      -moz-font-feature-settings: "kern" 1;
